  if the write blocks after some data has already been written (as otherwise
  there is no way of knowing how much data has been written before
  blocking). The same behaviour was already present under Unix.
  (Nicolás Ojeda Bär, review by David Allsopp)

* #11991: Unix on Windows: map ERROR_TOO_MANY_LINKS to EMLINK.
  (Nicolás Ojeda Bär)

### Tools:

- #1172: fix ocamlyacc's handling of raw string literals
  (Demi Marie Obenour)

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11166: ocamllex: the union of two character sets "cset1 | cset2" can now be
  used in any context where a character set is expected.
  (Nicolás Ojeda Bär, Martin Jambon, review by Sébastien Hinderer)

- #11718: ocamlyacc: OCaml-style comments are now supported, in addition to
  the C-style comments already supported.  The syntax is the same as that used
  in OCaml code.
  (Demi Marie Obenour, review by Damien Doligez)

- #11728: ocamlyacc: generate line directives for %type declarations
  (Demi Marie Obenour, review by Damien Doligez)

- #11773: ocamlyacc: Do not allow quoted literals (such as 'a' or "bc")
  in a token name or %type declaration.  Previously such literals were
  accepted by ocamlyacc, but produced malformed OCaml that was rejected
  by the compiler.
  (Demi Marie Obenour)

- #11774: ocamlyacc: fail if there is an I/O error
  (Demi Marie Obenour)

- #10647: Show hints for the "undefined global" error in the toplevel
  (Wiktor Kuchta, review by Gabriel Scherer)

- #11973: Add support for postfixed mingw host triplets
  (Romain Beauxis)

- #11889, #11978: ocamldoc: handle injectivity annotations and wildcards in type
  parameters.
  (Florian Angeletti, report by Wiktor Kuchta, review by Jules Aguillon)

* #11993: install only bytecode executables for the `ocamlmklib`, `ocamlcmt`,
  `ocamlprof`, `ocamlcp`, `ocamloptp`, and `ocamlmktop` tools, but no